// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Upload/Icon Can Remove 1`] = `
.c6 {
  box-sizing: content-box;
  width: 8px;
  height: 8px;
  color: #8da2b5;
}

.c6 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c7 .c5 {
  color: #fff;
}

.c8 .c5 {
  color: #6e849a;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  position: absolute;
  top: 0px;
  right: 0px;
  border-radius: 50%;
  width: 20px;
  height: 20px;
  background: white;
  box-shadow: 0px 2px 4px rgba(17,49,96,0.16),0px 0px 0px rgba(17,49,96,0.04);
}

.c1 {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 0.15s ease,border 0.15s ease;
  transition: background-color 0.15s ease,border 0.15s ease;
  border-radius: 50%;
  border: 1px solid #d4d9e6;
  cursor: pointer;
  position: relative;
  width: 150px;
  height: 150px;
  background-color: #f6f7fa;
  background-position: center center;
  background-size: cover;
  background-image: url(https://nerdbot.com/wp-content/uploads/2018/09/mrP.jpg);
}

.c2:hover {
  background-color: #f1f3f8;
}

.c2:before {
  background: none;
  border: 2px solid #fff;
  border-radius: 50%;
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  pointer-events: none;
}

.c0:not(:hover) .c3 {
  display: none;
}

.c0:focus {
  outline: none;
}

<div
  className="c0"
  onBlur={[Function]}
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <input
    accept={
      Array [
        "image/jpeg",
        "image/png",
      ]
    }
    autoComplete="off"
    className="c1"
    multiple={true}
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
    type="file"
  />
  <div
    className="c2"
    onClick={[Function]}
    size={150}
  >
    <div
      className="c3 c4"
      onClick={[Function]}
    >
      <span
        className="c5 c6"
        color="#8da2b5"
        size={8}
      >
        <svg
          data-file-name="SvgClose"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Upload/Icon Large 1`] = `
.c4 {
  box-sizing: content-box;
  width: 25.263157894736842px;
  height: 25.263157894736842px;
  color: #BECEDC;
}

.c4 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c5 .c3 {
  color: #fff;
}

.c6 .c3 {
  color: #6e849a;
}

.c1 {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 0.15s ease,border 0.15s ease;
  transition: background-color 0.15s ease,border 0.15s ease;
  border-radius: 50%;
  border: 1px solid #d4d9e6;
  cursor: pointer;
  position: relative;
  width: 120px;
  height: 120px;
  background-color: #f6f7fa;
  background-position: center center;
  background-size: cover;
}

.c2:hover {
  background-color: #f1f3f8;
}

.c2:before {
  background: none;
  border: 2px solid #fff;
  border-radius: 50%;
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  pointer-events: none;
}

.c0:not(:hover) .c7 {
  display: none;
}

.c0:focus {
  outline: none;
}

<div
  className="c0"
  onBlur={[Function]}
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <input
    accept={
      Array [
        "image/jpeg",
        "image/png",
      ]
    }
    autoComplete="off"
    className="c1"
    multiple={true}
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
    type="file"
  />
  <div
    className="c2"
    onClick={[Function]}
    size={120}
  >
    <span
      className="c3 c4"
      color="#BECEDC"
      size={25.263157894736842}
    >
      <svg
        data-file-name="SvgImage"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Upload/Icon Medium 1`] = `
.c4 {
  box-sizing: content-box;
  width: 21.05263157894737px;
  height: 21.05263157894737px;
  color: #BECEDC;
}

.c4 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c5 .c3 {
  color: #fff;
}

.c6 .c3 {
  color: #6e849a;
}

.c1 {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 0.15s ease,border 0.15s ease;
  transition: background-color 0.15s ease,border 0.15s ease;
  border-radius: 50%;
  border: 1px solid #d4d9e6;
  cursor: pointer;
  position: relative;
  width: 100px;
  height: 100px;
  background-color: #f6f7fa;
  background-position: center center;
  background-size: cover;
}

.c2:hover {
  background-color: #f1f3f8;
}

.c2:before {
  background: none;
  border: 2px solid #fff;
  border-radius: 50%;
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  pointer-events: none;
}

.c0:not(:hover) .c7 {
  display: none;
}

.c0:focus {
  outline: none;
}

<div
  className="c0"
  onBlur={[Function]}
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <input
    accept={
      Array [
        "image/jpeg",
        "image/png",
      ]
    }
    autoComplete="off"
    className="c1"
    multiple={true}
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
    type="file"
  />
  <div
    className="c2"
    onClick={[Function]}
    size={100}
  >
    <span
      className="c3 c4"
      color="#BECEDC"
      size={21.05263157894737}
    >
      <svg
        data-file-name="SvgImage"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Upload/Icon Small 1`] = `
.c4 {
  box-sizing: content-box;
  width: 16.842105263157894px;
  height: 16.842105263157894px;
  color: #BECEDC;
}

.c4 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c5 .c3 {
  color: #fff;
}

.c6 .c3 {
  color: #6e849a;
}

.c1 {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 0.15s ease,border 0.15s ease;
  transition: background-color 0.15s ease,border 0.15s ease;
  border-radius: 50%;
  border: 1px solid #d4d9e6;
  cursor: pointer;
  position: relative;
  width: 80px;
  height: 80px;
  background-color: #f6f7fa;
  background-position: center center;
  background-size: cover;
}

.c2:hover {
  background-color: #f1f3f8;
}

.c2:before {
  background: none;
  border: 2px solid #fff;
  border-radius: 50%;
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  pointer-events: none;
}

.c0:not(:hover) .c7 {
  display: none;
}

.c0:focus {
  outline: none;
}

<div
  className="c0"
  onBlur={[Function]}
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <input
    accept={
      Array [
        "image/jpeg",
        "image/png",
      ]
    }
    autoComplete="off"
    className="c1"
    multiple={true}
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
    type="file"
  />
  <div
    className="c2"
    onClick={[Function]}
    size={80}
  >
    <span
      className="c3 c4"
      color="#BECEDC"
      size={16.842105263157894}
    >
      <svg
        data-file-name="SvgImage"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Upload/Icon Xlarge 1`] = `
.c4 {
  box-sizing: content-box;
  width: 31.57894736842105px;
  height: 31.57894736842105px;
  color: #BECEDC;
}

.c4 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c5 .c3 {
  color: #fff;
}

.c6 .c3 {
  color: #6e849a;
}

.c1 {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 0.15s ease,border 0.15s ease;
  transition: background-color 0.15s ease,border 0.15s ease;
  border-radius: 50%;
  border: 1px solid #d4d9e6;
  cursor: pointer;
  position: relative;
  width: 150px;
  height: 150px;
  background-color: #f6f7fa;
  background-position: center center;
  background-size: cover;
}

.c2:hover {
  background-color: #f1f3f8;
}

.c2:before {
  background: none;
  border: 2px solid #fff;
  border-radius: 50%;
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  pointer-events: none;
}

.c0:not(:hover) .c7 {
  display: none;
}

.c0:focus {
  outline: none;
}

<div
  className="c0"
  onBlur={[Function]}
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <input
    accept={
      Array [
        "image/jpeg",
        "image/png",
      ]
    }
    autoComplete="off"
    className="c1"
    multiple={true}
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
    type="file"
  />
  <div
    className="c2"
    onClick={[Function]}
    size={150}
  >
    <span
      className="c3 c4"
      color="#BECEDC"
      size={31.57894736842105}
    >
      <svg
        data-file-name="SvgImage"
      />
    </span>
  </div>
</div>
`;
